--- a/Azure.Deploy.App/Pages/Index.cshtml
+++ b/Azure.Deploy.App/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4"> Azure Deploy using local GIT repository </h1>
+    <h1 class="display-4"> Azure Deploy using  GIT CI/CD </h1>
     <p>Azure simple  Deploy App</p>
 </div>
